cabal-version:      2.4
name:               void-streaming
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Sergey Ivanov
maintainer:         ivanovs-4@yandex.ru

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

executable void-streaming
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , base58-bytestring
                    , bytestring
                    , cryptonite
                    , memory
                    , resourcet
                    , streaming
                    , streaming-bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , DerivingVia
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , OverloadedLabels
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns
